compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__external_fn__external_fn_from_file.snap
---
source: compiler-core/src/fsharp/tests/external_fn.rs
assertion_line: 19
expression: "\n@external(fsharp, \"./SomeFile.fs\", \"SomeFile.run\")\npub fn run() -> Int\n\npub fn main() -> Int {\n    run()\n}\n"
---
module rec my.``mod``
let run (): int = SomeFile.run ()
let main (): int = begin
    run()
end
