compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__external_fn__external_fn_from_std_lib.snap
---
source: compiler-core/src/fsharp/tests/external_fn.rs
expression: "\n@external(fsharp, \"FSharp.MyApp\", \"run\")\npub fn run() -> Int\n\npub fn foo() -> Int {\n    run()\n}\n"
---
module rec my.``mod``

let run () = FSharp.MyApp.run ()
let foo () = begin
    run()
end
